--- a/task4/public/styles/styles.scss
+++ b/task4/public/styles/styles.scss
@@ -1,1 +1,159 @@
 @use "reset.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  @media (width < vars.$width-smartpthone) {
+    font-size: 16px;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: vars.$black-color;
+}
+
+.wrapped {
+  min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  @media (width < vars.$width-tablet) {
+    padding-top: 118px;
+  }
+  @media (width < vars.$width-smartpthone) {
+    padding-top: 114px;
+  }
+}
+.wrap {
+  width: calc(vars.$width-tablet - 72px);
+  padding: 0 36px;
+  margin: 0 auto;
+
+  @media (width < vars.$width-tablet) {
+    padding: 0 32px;
+    width: calc(768px - 64px);
+  }
+  @media (width < vars.$width-smartpthone) {
+    width: calc(320px - 16px);
+    padding: 0 8px;
+  }
+}
+
+.none {
+  display: none;
+}
+
+.menu {
+  background-color: vars.$gray-color;
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    align-items: center;
+    @media (width < vars.$width-smartpthone) {
+      justify-content: space-around;
+    }
+  }
+  &__icon {
+    fill: vars.$black-color;
+    width: 30px;
+    height: 30px;
+  }
+  &__icon-big {
+    width: 50px;
+    height: 40px;
+  }
+}
+
+.game {
+  background-color: vars.$green_color;
+  min-height: 200px;
+  width: 100%;
+
+  &__card-box {
+    display: grid;
+    // align-items: center;
+    // justify-items: center;
+    text-align: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-rows: 1fr 1fr 1fr;
+    gap: 10px;
+    padding: 20px 16px;
+    @media (width < vars.$width-tablet) {
+      // min-height: 70vh;
+    }
+  }
+  &__card {
+    height: fit-content;
+  }
+  &__card-rear {
+    fill: vars.$blue-dark-color;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+    height: 115px;
+  }
+}
+
+.info {
+  background-color: #fff;
+  &__box {
+    padding: 16px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media (width < vars.$width-smartpthone) {
+      justify-content: flex-start;
+    }
+  }
+  &__item {
+    @media (width < vars.$width-smartpthone) {
+      flex-basis: 40%;
+      padding-left: 25px;
+    }
+  }
+}
+
+.flip-vertical-right {
+  -webkit-animation: flip-vertical-right 0.4s
+    cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+  animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+}
+
+@keyframes flip-vertical-right {
+  0% {
+    -webkit-transform: rotateY(0);
+    transform: rotateY(0);
+  }
+  100% {
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+  }
+}
+
+.flip-vertical-left {
+  -webkit-animation: flip-vertical-left 0.4s
+    cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+  animation: flip-vertical-left 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+}
+
+@keyframes flip-vertical-left {
+  0% {
+    -webkit-transform: rotateY(0);
+    transform: rotateY(0);
+  }
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+  }
+}
