--- a/task4/public/styles/styles.scss
+++ b/task4/public/styles/styles.scss
@@ -14,6 +14,7 @@ body {
 
 a {
   text-decoration: none;
+  color: vars.$black-color;
 }
 
 a:visited {
@@ -92,7 +93,10 @@ a:visited {
     }
   }
   &__card {
+    position: relative;
     height: fit-content;
+    background-color: #fff;
+    border-radius: 5px;
   }
   &__card-rear {
     fill: vars.$blue-dark-color;
@@ -100,6 +104,15 @@ a:visited {
     border-radius: 5px;
     width: 100%;
     height: 115px;
+  }
+  &__card-front {
+    position: absolute;
+    width: 85%;
+    height: 115px;
+    fill: #b35f5f;
+    top: 0;
+    left: 6%;
+    opacity: 0;
   }
 }
 
@@ -123,37 +136,62 @@ a:visited {
 }
 
 .flip-vertical-right {
-  -webkit-animation: flip-vertical-right 0.4s
-    cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
   animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
     both;
+}
+.opacity-appear {
+  animation: opacity-appear 0.4s linear both;
+}
+.opacity-disappeared {
+  animation: opacity-disappeared 0.4s linear both;
 }
 
 @keyframes flip-vertical-right {
   0% {
-    -webkit-transform: rotateY(0);
     transform: rotateY(0);
   }
+  50% {
+    transform: rotateY(90deg);
+  }
   100% {
-    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
   }
 }
 
+@keyframes opacity-appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacity-disappeared {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .flip-vertical-left {
-  -webkit-animation: flip-vertical-left 0.4s
-    cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
   animation: flip-vertical-left 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
     both;
 }
 
 @keyframes flip-vertical-left {
   0% {
-    -webkit-transform: rotateY(0);
     transform: rotateY(0);
   }
   100% {
-    -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
   }
 }
