--- a/task4/public/styles/styles.scss
+++ b/task4/public/styles/styles.scss
@@ -61,6 +61,7 @@ a:visited {
     align-items: center;
     @media (width < vars.$width-smartpthone) {
       justify-content: space-around;
+      padding: 8px 0;
     }
   }
   &__icon {
@@ -81,15 +82,30 @@ a:visited {
 
   &__card-box {
     display: grid;
-    // align-items: center;
-    // justify-items: center;
-    text-align: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    // grid-template-rows: 1fr 1fr 1fr;
+    margin: 0 auto;
+    width: fit-content;
     gap: 10px;
-    padding: 20px 16px;
+    padding: 40px 10px;
     @media (width < vars.$width-tablet) {
-      // min-height: 70vh;
+      // padding: 60px 10px;
+    }
+    @media (width < vars.$width-smartpthone) {
+      padding: 16px;
+    }
+  }
+  &__card-box4x3 {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  &__card-box5x4 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    @media (width < vars.$width-smartpthone) {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
+  &__card-box6x5 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    @media (width < vars.$width-smartpthone) {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
   &__card {
@@ -97,20 +113,33 @@ a:visited {
     height: fit-content;
     background-color: #fff;
     border-radius: 5px;
+    width: 140px;
+    @media (width < vars.$width-tablet) {
+      width: 100px;
+    }
+    @media (width < vars.$width-smartpthone) {
+      width: 60px;
+    }
   }
   &__card-rear {
     fill: vars.$blue-dark-color;
     background-color: #fff;
     border-radius: 5px;
     width: 100%;
-    height: 115px;
+    height: 175px;
+    @media (width < vars.$width-tablet) {
+      height: 120px;
+    }
+    @media (width < vars.$width-smartpthone) {
+      height: 80px;
+    }
   }
   &__card-front {
     position: absolute;
     width: 85%;
     height: 115px;
     fill: #b35f5f;
-    top: 0;
+    top: calc(50% - 58px);
     left: 6%;
     opacity: 0;
   }
@@ -124,7 +153,14 @@ a:visited {
     justify-content: space-between;
     flex-wrap: wrap;
     @media (width < vars.$width-smartpthone) {
+      padding: 8px 0;
       justify-content: flex-start;
+    }
+  }
+  &__item:last-child {
+    flex-basis: 22%;
+    @media (width < vars.$width-smartpthone) {
+      flex-basis: 40%;
     }
   }
   &__item {
