--- a/task4/public/styles/styles.scss
+++ b/task4/public/styles/styles.scss
@@ -21,6 +21,12 @@ a:visited {
   color: vars.$black-color;
 }
 
+input[type="checkbox"] {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
 .wrapped {
   min-height: 100vh;
   display: flex;
@@ -46,10 +52,6 @@ a:visited {
     width: calc(320px - 16px);
     padding: 0 8px;
   }
-}
-
-.none {
-  display: none;
 }
 
 .menu {
@@ -171,6 +173,167 @@ a:visited {
   }
 }
 
+.modal {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: vars.$green-modal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  &__title {
+    padding-bottom: 24px;
+    font-size: 28px;
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    align-content: center;
+    align-items: center;
+  }
+
+  &__btn {
+    width: 120px;
+    padding: 6px 0;
+    border: 1px solid #000;
+    border-radius: 5px;
+    margin-bottom: 12px;
+  }
+  &__btn:hover {
+    background-color: vars.$blue-dark-color;
+  }
+  &__flex {
+    display: flex;
+    font-size: 16px;
+    width: 300px;
+    padding: 10px 0;
+    justify-content: space-between;
+  }
+}
+
+.options {
+  &__container {
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    height: 85vh;
+    justify-content: space-around;
+  }
+  &__flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 16px;
+  }
+  &__size-radio {
+    display: none;
+  }
+  &__size-radio:checked ~ &__size-label {
+    color: vars.$blue-color;
+  }
+  &__size-label {
+  }
+
+  &__range {
+    width: 50%;
+  }
+
+  &__input-upload {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+  }
+
+  &__btn-upload,
+  &__btn-save {
+    padding: 8px 16px;
+    height: fit-content;
+    border: none;
+    border-radius: 10px;
+    background-color: #24a3a3;
+    font-weight: inherit;
+    font-family: inherit;
+    line-height: 100%;
+    border: 1px solid transparent;
+    transition: all 0.3s;
+    @media (width < 768px) {
+      width: 95px;
+      text-align: center;
+    }
+  }
+
+  &__agree + label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+  }
+  &__agree + label::after {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 2px solid #24a3a3;
+    background-color: vars.$green-modal;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin: 14px 0px 0px 50px;
+  }
+  @media (width < 1280px) {
+    &__agree + label::after {
+      margin-bottom: 10px;
+    }
+  }
+  @media (width < 768px) {
+    &__agree + label::after {
+      margin-bottom: 31px;
+    }
+  }
+  &__agree:checked + label::after {
+    background: vars.$green-modal vars.$chbox-svg center center no-repeat;
+  }
+  &__agree:hover + label::after {
+    border-color: #fcfaf9;
+    background-color: rgba(252, 250, 249, 0.5647058824);
+  }
+  &__agree:focus + label::after {
+    border-color: #1b1f21;
+  }
+  &__agree:disabled + label::after {
+    border-color: rgba(252, 250, 249, 0.5647058824);
+    background-color: rgba(252, 250, 249, 0.5647058824);
+    background-image: none;
+  }
+  &__chbox-text {
+    color: #000000;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 140%;
+    width: 536px;
+  }
+  @media (width < 1280px) {
+    &__chbox-text {
+      color: #000000;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 140%;
+      width: 320px;
+    }
+  }
+  @media (width < 768px) {
+    &__chbox-text {
+      width: 220px;
+    }
+  }
+}
+
 .flip-vertical-right {
   animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
     both;
@@ -225,9 +388,16 @@ a:visited {
 
 @keyframes flip-vertical-left {
   0% {
-    transform: rotateY(0);
+    transform: rotateY(180deg);
+  }
+  50% {
+    transform: rotateY(90deg);
   }
   100% {
-    transform: rotateY(-180deg);
+    transform: rotateY(0deg);
   }
+}
+
+.none {
+  display: none;
 }
